Fixed banned page dark mode.

--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -12,7 +12,7 @@
     --text-dark: #919191;
 }
 
-.characterContainer-0-2-54, .messagesContainer-0-2-79, .btnBottomSeperator-0-2-85, .messagesContainer-0-2-33, .message-container, .not-approved-page-content, .not-approved-page {
+.characterContainer-0-2-54, .messagesContainer-0-2-79, .btnBottomSeperator-0-2-85, .messagesContainer-0-2-33 {
     background: var(--body);
 }
 
